test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048
  namespace: test
spec:
  selector:
    app: game-2048
  ports:
    - protocol: TCP
      port: 80           # exposed port number
      targetPort: 80      # forwarded port number into application
  type: LoadBalancer
